# smarthome-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  API_DOCUMENTATION.md  DATABASE_SETUP.md  Dockerfile  README.md  docker-compose.production.yaml  docker-compose.yaml  docker-compose.yml  env.example  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_database.py  turbo.json  vite.config.js
apps/backend/: .coveragerc  .dockerignore  .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  test_gemini_models.py
apps/backend/accounts/: authentication.py  tests.py  urls.py  views.py
apps/backend/app/: asgi.py  settings.py  urls.py
apps/backend/data/: smarthome.fs
apps/backend/docker/: entrypoint.sh
apps/backend/home/: views.py  zo_models.py  zodb_store.py
apps/backend/home/migrations/: 0003_userhome.py  0004_rename_home_userho_user_id_home_i_idx_home_userho_user_id_39a909_idx_and_more.py
apps/backend/homes/: apps.py  base_scada.py  consumers.py  llm_interfaces.py  llm_providers.py  middleware.py  models.py  npc_chat.py  permissions.py  routing.py  scada.py  scada_ws.py  scheduler.py  serializers.py  services.py  signals.py  smartmeter.py  test_integration.py  urls.py  utils.py  views.py
apps/backend/homes/migrations/: 0001_initial.py  0002_alter_positionhistory_point.py  0003_device_tag.py  0004_device_is_on.py  0005_airconditioner_fan_level.py  0006_device_rotation_fields.py  0006_device_rotation_x_device_rotation_y_and_more.py  0007_automation.py  0007_room_position_x_room_position_y_room_position_z_and_more.py  0008_room_anchor_uuid.py  0008_smartmeter.py  (+7 more)
(+372 files in other folders)
