[project]
name = "smarthomear-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "b1ngoinho11",email = "budthbundit.thayaurai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.10.0)",
    "django (==5.2.7)",
    "django-debug-toolbar (==6.0.0)",
    "djangorestframework (==3.16.1)",
    "psycopg2-binary (==2.9.11)",
    "sqlparse (==0.5.3)",
    "djangorestframework-gis (>=1.2.0,<2.0.0)",
    "zodb (>=5)",
    "persistent (>=5)",
    "btrees (>=5)",
    "transaction (>=5.0,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
